# file_upload_system

./: .gitignore  README.md  file_upload_system.db  main.py  pyproject.toml
app/: auth.py  database.py  schemas.py  templates.py
app/models/: __init__.py  models.py
app/routers/: __init__.py  assignments.py  auth.py  classes.py  courses.py  dashboard.py  users.py
app/uploads/student_3/: fa4bd977-d76d-4f1e-8050-d38f53bbfbb7.docx
app/uploads/student_7/: 05068959-4063-452f-8ad0-baf4b563bf83.docx
scripts/: migrate_add_file_size.py  migrate_db.py
static/css/: style.css
static/css/lib/: select2.min.css
static/js/: main.js
templates/: admin_panel.html  assignment_form.html  assignments.html  change_password.html  class_form.html  classes.html  course_form.html  courses.html  dashboard.html  error.html  layout.html  login.html  my_assignments.html  pagination.html  profile.html  submission.html  upload.html  user_create.html  user_delete_confirm.html  user_edit.html  users.html
